--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promise-ripple",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./lib/index.js",
   "esnext": "./src/index.js",
@@ -22,6 +22,8 @@
     "babel-preset-es2015": "^6.6.0"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
